Fix overlapping menu in mobile view

--- a/_static/css/divio.css
+++ b/_static/css/divio.css
@@ -31,6 +31,12 @@
     max-width: 23em;
 }
 
+@media screen and (max-width: 768px) {
+    .wy-nav-content-wrap .wy-nav-content {
+        padding: 70px 20px 26px;
+    }
+}
+
 @media screen and (max-width: 1024px) {
     #contents {
         float: none;
